Add the loot JSON parser with loot table files
This includes the org.json dependency that is used in the parser. Includes 1.16
loot table files and fixes irregular comment formatting for entry functions.

--- a/build.gradle
+++ b/build.gradle
@@ -20,4 +20,5 @@ dependencies {
     implementation ('com.github.mjtb49:ChunkRandomReversal:e66e286f4bcc5f652ba53f61482fc7dca8ef7d49') {
         transitive = false
     }
+    implementation group: 'org.json', name: 'json', version: '20200518'
 }
